[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/anima/visual-editor/property/AnimaPivotButton.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/visual-editor/icons/Point.svg" type="Texture2D" id=3]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.862745, 0.862745, 0.862745, 1 )

[sub_resource type="ButtonGroup" id=4]

[node name="PivotButton" type="VBoxContainer"]
anchor_right = 1.0
offset_right = -808.0
offset_bottom = 164.0
minimum_size = Vector2( 0, 32 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 253.0
offset_bottom = 49.0

[node name="IgnoreButton" parent="HBoxContainer" instance=ExtResource( 2 )]
offset_right = 121.0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
pressed = true
group = SubResource( 2 )
text = "Ignore"
__meta__ = {
"__initial_AnimaNode__anima_1089089038415726807__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1089089038415726807_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1109358829504410889_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1199797368124862305_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1441945957727123779_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_164700612275147168__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_164700612275147168_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1658482992875293945__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1658482992875293945_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1663072209510023438__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1663072209510023438_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_215925900549246643__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_215925900549246643_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_244386363034037598__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_244386363034037598_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_359789769654524719__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_359789769654524719_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_447088250819550293_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_454360864891194458__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_454360864891194458_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_454360864891194458_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_503159164245518066__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_503159164245518066_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_503159164245518066_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_541279795408501465__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_541279795408501465_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_611141024203869141_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_625146128990218994__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_625146128990218994_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_647142782613271851__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_647142782613271851_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_698052055760981323__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_698052055760981323_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_774037851557249634_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_807775977158753784__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_807775977158753784_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_8113687285780011__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_8113687285780011_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_838497898335865356_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_840572761080846802__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_840572761080846802_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_840572761080846802_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_871971128971702881__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_871971128971702881_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_871971128971702881_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_944680552210345459__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_944680552210345459_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_944680552210345459_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"_editor_description_": ""
}

[node name="PointButton" parent="HBoxContainer" instance=ExtResource( 2 )]
offset_left = 129.0
offset_right = 253.0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 2 )
text = "Point"
icon = ExtResource( 3 )
__meta__ = {
"__initial_AnimaNode__anima_1089089038415726807__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1089089038415726807_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1109358829504410889_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1199797368124862305_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1441945957727123779_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_164700612275147168__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_164700612275147168_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1658482992875293945__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1658482992875293945_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1663072209510023438__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1663072209510023438_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_215925900549246643__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_215925900549246643_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_244386363034037598__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_244386363034037598_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_359789769654524719__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_359789769654524719_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_447088250819550293_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_454360864891194458__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_454360864891194458_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_454360864891194458_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_503159164245518066__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_503159164245518066_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_503159164245518066_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_541279795408501465__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_541279795408501465_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_611141024203869141_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_625146128990218994__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_625146128990218994_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_647142782613271851__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_647142782613271851_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_698052055760981323__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_698052055760981323_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_774037851557249634_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_807775977158753784__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_807775977158753784_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_8113687285780011__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_8113687285780011_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_838497898335865356_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_840572761080846802__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_840572761080846802_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_840572761080846802_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_871971128971702881__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_871971128971702881_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_871971128971702881_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_944680552210345459__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_944680552210345459_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_944680552210345459_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"_editor_description_": ""
}

[node name="PivotPoints" type="CenterContainer" parent="."]
visible = false
offset_top = 45.0
offset_right = 216.0
offset_bottom = 172.0

[node name="GridContainer" type="GridContainer" parent="PivotPoints"]
offset_left = 52.0
offset_right = 164.0
offset_bottom = 127.0
minimum_size = Vector2( 0, 98 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/v_separation = 8
custom_constants/h_separation = 8
columns = 3

[node name="Button" type="Button" parent="PivotPoints/GridContainer"]
offset_right = 32.0
offset_bottom = 37.0
minimum_size = Vector2( 32, 32 )
tooltip_text = "Top Left"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
pressed = true
group = SubResource( 4 )
align = 2

[node name="Button2" type="Button" parent="PivotPoints/GridContainer"]
offset_left = 40.0
offset_right = 72.0
offset_bottom = 37.0
minimum_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )
__meta__ = {
"_editor_description_": "Top Center"
}

[node name="Button3" type="Button" parent="PivotPoints/GridContainer"]
offset_left = 80.0
offset_right = 112.0
offset_bottom = 37.0
minimum_size = Vector2( 32, 32 )
tooltip_text = "Top Right"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button4" type="Button" parent="PivotPoints/GridContainer"]
offset_top = 45.0
offset_right = 32.0
offset_bottom = 82.0
minimum_size = Vector2( 32, 32 )
tooltip_text = "Center Left"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button5" type="Button" parent="PivotPoints/GridContainer"]
offset_left = 40.0
offset_top = 45.0
offset_right = 72.0
offset_bottom = 82.0
minimum_size = Vector2( 32, 32 )
tooltip_text = "Center"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button6" type="Button" parent="PivotPoints/GridContainer"]
offset_left = 80.0
offset_top = 45.0
offset_right = 112.0
offset_bottom = 82.0
minimum_size = Vector2( 32, 32 )
tooltip_text = "Center Right"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button7" type="Button" parent="PivotPoints/GridContainer"]
offset_top = 90.0
offset_right = 32.0
offset_bottom = 127.0
minimum_size = Vector2( 32, 32 )
tooltip_text = "Bottom Left"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button8" type="Button" parent="PivotPoints/GridContainer"]
offset_left = 40.0
offset_top = 90.0
offset_right = 72.0
offset_bottom = 127.0
minimum_size = Vector2( 32, 32 )
tooltip_text = "Bottom Center"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[node name="Button9" type="Button" parent="PivotPoints/GridContainer"]
offset_left = 80.0
offset_top = 90.0
offset_right = 112.0
offset_bottom = 127.0
minimum_size = Vector2( 32, 32 )
tooltip_text = "Bottom Right"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
toggle_mode = true
group = SubResource( 4 )

[connection signal="pressed" from="HBoxContainer/IgnoreButton" to="." method="_on_IgnoreButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PointButton" to="." method="_on_PointButton_pressed"]
